--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <img src="images/images/arrow_bottom.png" alt="Jump to portfolio">
                 </a>
             </div>
-        </section>
+        </section> <!-- HOME END-->
         <!-- PORTFOLIO -->
         <section>
             <div class="portfolio container-fluid text-center">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!-- PORTFOLIO END-->
         <!-- ABOUT -->
         <section>
             <div class="about container-fluid text-center">
@@ -142,6 +142,7 @@
                 </div>
             </div>
         </section>
+        <!--ABOUT END-->
         <!-- CONTACT -->
         <section>
             <div class="contact container-fluid ">
@@ -194,6 +195,7 @@
             </div>
 
         </section>
+        <!--CONTACT END-->
     </main>
     <footer>
         <div class="container-fluid">
